# tauri-plugin-mailto

./: Cargo.toml  README.md  build.rs  flake.nix
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/: MailtoFileProvider.kt  MailtoPlugin.kt
android/src/main/res/xml/: mailto_file_paths.xml
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: MailtoPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: mailto.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
