[package]
name = "tauri-plugin-mailto"
version = "0.1.0"
authors = ["You"]
description = "Tauri plugin for composing emails with optional attachments"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mailto"

[dependencies]
tauri = { version = "2.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
open = "5"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
